<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.holly.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/banner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:text="@string/welcome"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:text="@string/welcome_Second_Line"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View style="@style/Divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="casual"
            android:paddingLeft="8dp"
            android:text="@string/question_One"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <RadioButton
                android:id="@+id/question_One_First_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/question_One_Ans_One" />

            <RadioButton
                android:id="@+id/question_One_Second_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/question_One_Ans_Two" />

            <RadioButton
                android:id="@+id/question_One_Third_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/question_One_Ans_Three" />

            <RadioButton
                android:id="@+id/question_One_Fourth_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/question_One_Ans_Four" />

        </RadioGroup>

        <View style="@style/Divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="casual"
            android:paddingLeft="8dp"
            android:text="@string/question_Two"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/question_Two_First_Ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/question_Two_Ans_One" />

            <CheckBox
                android:id="@+id/question_Two_Second_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/question_Two_Ans_Two" />

            <CheckBox
                android:id="@+id/question_Two_Third_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/question_Two_Ans_Three" />

            <CheckBox
                android:id="@+id/question_Two_Fourth_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/question_Two_Ans_Four" />

        <View style="@style/Divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="casual"
            android:paddingLeft="8dp"
            android:text="@string/question_Three"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <RadioButton
                android:id="@+id/question_Three_First_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/question_Three_Ans_One" />

            <RadioButton
                android:id="@+id/question_Three_Second_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/question_Three_Ans_Two" />

            <RadioButton
                android:id="@+id/question_Three_Third_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/question_Three_Ans_Three" />

            <RadioButton
                android:id="@+id/question_Three_Fourth_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/question_Three_Ans_Four" />

        </RadioGroup>

        <View style="@style/Divider" />

        <TextView
            android:id="@+id/question_Four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="casual"
            android:paddingLeft="8dp"
            android:paddingBottom="8dp"
            android:text="@string/question_Four"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <RadioButton
                android:id="@+id/question_Four_First_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingLeft="8dp"
                android:drawableBottom="@drawable/ankh"
                android:text="@string/question_Four_Ans_One" />

            <RadioButton
                android:id="@+id/question_Four_Second_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingLeft="8dp"
                android:drawableBottom="@drawable/scarab"
                android:text="@string/question_Four_Ans_Two" />

            <RadioButton
                android:id="@+id/question_Four_Third_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingLeft="8dp"
                android:drawableBottom="@drawable/sphinx"
                android:text="@string/question_Four_Ans_Three" />

            <RadioButton
                android:id="@+id/question_Four_Fourth_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingLeft="8dp"
                android:drawableBottom="@drawable/sistrum"
                android:text="@string/question_Four_Ans_Four" />

        </RadioGroup>

        <View style="@style/Divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="casual"
            android:paddingLeft="8dp"
            android:text="@string/question_Five"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

        <RadioButton
            android:id="@+id/question_Five_First_Ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/question_Five_Ans_One" />

        <RadioButton
            android:id="@+id/question_Five_Second_Ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/question_Five_Ans_Two" />
        </RadioGroup>

        <View style="@style/Divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="casual"
            android:paddingLeft="8dp"
            android:text="@string/question_Six"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:src="@drawable/nefertiti"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <RadioButton
                android:id="@+id/question_Six_First_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/question_Six_Ans_One" />

            <RadioButton
                android:id="@+id/question_Six_Second_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/question_Six_Ans_Two" />

            <RadioButton
                android:id="@+id/question_Six_Third_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/question_Six_Ans_Three" />

            <RadioButton
                android:id="@+id/question_Six_Fourth_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/question_Six_Ans_Four" />

        </RadioGroup>

        <View style="@style/Divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="casual"
            android:paddingLeft="8dp"
            android:text="@string/question_Seven"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/question_Seven_First_Ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/question_Seven_Ans_One" />

        <CheckBox
            android:id="@+id/question_Seven_Second_Ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/question_Seven_Ans_Two" />

        <CheckBox
            android:id="@+id/question_Seven_Third_Ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/question_Seven_Ans_Three" />

        <CheckBox
            android:id="@+id/question_Seven_Fourth_Ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/question_Seven_Ans_Four" />

        <View style="@style/Divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="casual"
            android:paddingLeft="8dp"
            android:text="@string/question_Eight"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/question_Eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/question_Eight_Hint"
            android:inputType="text" />

        <View style="@style/Divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="casual"
            android:paddingLeft="8dp"
            android:text="@string/question_Nine"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <RadioButton
                android:id="@+id/question_Nine_First_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:drawableBottom="@drawable/khafre"
                android:text="@string/question_Nine_Ans_One" />

            <RadioButton
                android:id="@+id/question_Nine_Second_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="16dp"
                android:drawableBottom="@drawable/khufu"
                android:text="@string/question_Nine_Ans_Two" />

            <RadioButton
                android:id="@+id/question_Nine_Third_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="16dp"
                android:drawableBottom="@drawable/hatshepsut"
                android:text="@string/question_Nine_Ans_Three" />

            <RadioButton
                android:id="@+id/question_Nine_Fourth_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="16dp"
                android:drawableBottom="@drawable/ramses"
                android:text="@string/question_Nine_Ans_Four" />

        </RadioGroup>
        <View style="@style/Divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="casual"
            android:paddingLeft="8dp"
            android:text="@string/question_Ten"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <RadioButton
                android:id="@+id/question_Ten_First_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/question_Ten_Ans_One" />

            <RadioButton
                android:id="@+id/question_Ten_Second_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/question_Ten_Ans_Two" />

            <RadioButton
                android:id="@+id/question_Ten_Third_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/question_Ten_Ans_Three" />

            <RadioButton
                android:id="@+id/question_Ten_Fourth_Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/question_Ten_Ans_Four" />

        </RadioGroup>

        <View style="@style/Divider" />

        <Button
            android:id="@+id/submit_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:onClick="displayScore"
    android:text="@string/submit" />

    </LinearLayout>

    </ScrollView>
